# wagtail-generic-chooser

./: .gitignore  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  runtests.py  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: nightly-tests.yml  publish.yml  test.yml
generic_chooser/: views.py  widgets.py
generic_chooser/static/generic_chooser/js/: chooser-controller.js  chooser-modal.js  chooser-widget-telepath.js  chooser-widget.js  linked-field-chooser-widget-telepath.js  linked-field-chooser-widget.js  tabs.js
generic_chooser/templates/generic_chooser/: _ajax_pagination_nav.html  _create_tab.html  _listing_tab.html  _results.html  _search_form.html  choose.html  tabbed_modal.html  tabbed_modal_v3.html
generic_chooser/templates/generic_chooser/widgets/: chooser.html  chooser_v4.html  icon_new.html  icon_old.html
tests/: api.py  models.py  settings.py  tests.py  urls.py  views.py  wagtail_hooks.py  widgets.py
tests/migrations/: 0001_initial.py
